# tonysgolfy

./: .gitignore  sample-scores.csv
backend/: .env.example  Cargo.toml
backend/data/: guides.json
backend/python/: semantic_search.py
backend/src/: auth.rs  google_ai.rs  kimi_ai.rs  mail.rs  main.rs  models.rs  python_semantic.rs  score.rs  search.rs  store.rs
deploy/: Caddyfile  DEPLOY.md  cloudflared-config.yml  cloudflared.service  tonysgolfy-backend.service
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/modules/app/: routes.ts
frontend/src/modules/auth/: session.ts
frontend/src/modules/auth/components/: ChangePasswordModal.tsx  LoginPage.tsx
frontend/src/modules/guides/: types.ts  utils.ts
frontend/src/modules/guides/components/: CreateGuideModal.tsx  EditGuideModal.tsx  GuideDetailPanel.tsx  GuideFormPanel.tsx  GuideTablePanel.tsx  HeroPanel.tsx
frontend/src/modules/mail/components/: ComposeMailModal.tsx  MailPage.tsx
frontend/src/modules/scores/: utils.ts
frontend/src/modules/scores/components/: CompositeScorePage.tsx  ScorePage.tsx
frontend/src/modules/users/components/: UserManagementPage.tsx
